[project]
name = "unlocked-scraper"
version = "0.1.0"
description = "Web scraping demo showcasing async and GIL-free Python 3.14 performance"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "qrcode>=7.4.0",
    "rich>=13.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "plotext>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
